INCLUDES = -I$(top_builddir)/include -Wall
LIBS =

lib_LTLIBRARIES = libmemcached.la
libmemcached_la_SOURCES = memcached.c \
                          memcached_strerror.c \
			  memcached_connect.c \
			  memcached_response.c \
			  memcached_get.c \
			  memcached_storage.c \
			  memcached_delete.c \
			  memcached_hash.c \
			  memcached_auto.c \
			  memcached_verbosity.c \
			  memcached_quit.c \
			  memcached_flush.c \
			  memcached_string.c \
			  memcached_stats.c
